--- a/MongoMigrationWebApp/Shared/MainLayout.razor
+++ b/MongoMigrationWebApp/Shared/MainLayout.razor
@@ -5,7 +5,7 @@
 <div class="page">
     <main>
         <div class="top-row px-4 d-flex justify-content-between align-items-center">
-            <h2 class="text-left">Migrate to Azure Cosmos DB for MongoDB (vCore based)</h2>
+            <h2 class="text-left">Migrate to Azure DocumentDB</h2>
             <div class="ms-2 small">v0.9.2.5.2</div>
         </div>
 
